# data-pipeline-template

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
data/: orders.csv
src/: config.py  extract.py  load.py  pipeline.py  transform.py
