[project]
name = "data-pipeline-template"
version = "1.0.0"
description = "A minimal data pipeline template using Polars and Pydantic"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "src"

[tool.hatch.envs.default.scripts]
pipeline = "python src/pipeline.py"
